# RustShaderExperiment

./: .gitignore  Cargo.toml  README.md
src/: camera.rs  camera_controller.rs  instance.rs  lib.rs  light.rs  main.rs  model.rs  shader.wgsl  state.rs  texture.rs  vertex.rs
